--- a/style.css
+++ b/style.css
@@ -1,45 +1,95 @@
+* {
+  border: 0;
+  box-sizing: content-box;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-style: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  vertical-align: top;
+}
+html {
+  font: 16px/1 "Open Sans", sans-serif;
+  overflow: auto;
+  padding: 0.5in;
+}
+h1 {
+  font: bold 25px sans-serif;
+  letter-spacing: 0.5em;
+  text-align: center;
+  text-transform: uppercase;
+}
 
-            @page{
-            size : a4 portrait;
-            }
+header h1 {
+  background: #009879;
+  border-radius: 0.25em;
+  color: #fff;
+  margin: 0 0 1em;
+  padding: 0.5em 0;
+}
+header .header {
+  display: flex;
+}
+header address {
+  flex: 1;
+  float: left;
+  font-size: 15px;
+  font-style: normal;
+  line-height: 1.25;
+  width: 50%;
+}
+h2 {
+  font-weight: bold;
+}
+header address p {
+  margin: 0 0 0.25em;
+}
+header:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+}
 
-            * {
-                    border: 0;
-                    box-sizing: content-box;
-                    color: inherit;
-                    font-family: inherit;
-                    font-size: inherit;
-                    font-style: inherit;
-                    font-weight: inherit;
-                    line-height: inherit;
-                    list-style: none;
-                    margin: 0;
-                    padding: 0;
-                    text-decoration: none;
-                    vertical-align: top;
-                }
-            html { font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; }
-            h1 {
-                font: bold 25px sans-serif;
-                letter-spacing: 0.5em;
-                text-align: center;
-                text-transform: uppercase;
-            }
+thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+}
+th,
+td {
+  padding: 12px 15px;
+}
+tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
 
-            header h1 {
-                background: #000;
-                border-radius: 0.25em;
-                color: #FFF;
-                margin: 0 0 1em;
-                padding: 0.5em 0;
-                display: flex;
-            }
-            header address {
-                float: left;
-                font-size: 15px;
-                font-style: normal;
-                line-height: 1.25;
-                margin: 0 1em 1em 0;
-            }
-            header address p { margin: 0 0 0.25em; }
-            header:after { clear: both; content: ""; display: table; }
+tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+.small {
+  width: 3%;
+}
+.date {
+  width: 15%;
+}
+.small {
+text-align: center;
+}
